# fluid-led-grid

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
android/: AndroidManifest.xml  build.gradle
android/src/net/nanamitm/fluidledgrid/: FluidLedGridActivity.java
qml/: FluidGrid.qml  IconGlyph.qml  Main.qml  SettingSlider.qml
resources/: fluid-led-grid.desktop
src/: fluid_grid_item.cpp  fluid_grid_item.h  fluid_model.cpp  fluid_model.h  fluid_particles.cpp  fluid_particles.h  gravity_source.cpp  gravity_source.h  main.cpp  wake_lock.cpp  wake_lock.h
